--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -98,11 +98,31 @@ nav li a:hover {
 
 
 @media only screen and (max-width: 600px) {
+
   header {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    background-color: black;
-    min-width: 600px;
+    /* justify-content: center; */
+    background-color: rgba(0, 0, 0, 0.767);
+    min-width: 300px;
+  }
+
+  .header {
+    margin: 0 auto
+  }
+
+  ul li {
+    font-size: .8rem;
+
+  }
+
+  #header-logo h1 {
+    font-size: 1.8rem;
+  }
+
+  ul {
+    align-items: center;
+    text-align: center;
+    padding: 10px;
   }
 }
