--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,17 +1,14 @@
-.header {
+#header {
   display: flex;
-  justify-content: space-between;
-  padding: 10px 130px 10px 40px;
-  margin: 30px;
+  justify-content: space-around;
+  width: 100%;
+  padding: 30px 0;
   align-items: center;
-}
-
-.header-sticky {
-  position: fixed;
+  /* sticky position */
+  position: sticky;
   top: 0;
   left: 0;
-  width: 100%;
-  z-index: 1000;
+  /* sticky position */
 }
 
 #header-logo h1 {
@@ -38,96 +35,61 @@
 }
 
 .bg-logo-ccr {
-  padding-right: 10px;
   text-shadow: 4px 3px 3px rgba(0, 0, 0, 0.6);
+  padding: 0 10px;
 }
 
-nav ul {
+.navbar ul {
   display: flex;
+  gap: 20px;
+  list-style-type: none;
+}
+
+.navbar a {
+  font-size: 1.1rem;
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+  font-family: poppins;
+}
+
+.navbar a:hover {
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  font-weight: 400;
+}
+
+.dropdown {
+  display: inline-block;
+  position: relative;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: transparent;
-  min-width: 160px;
   z-index: 1;
-}
-
-.drop-down a {
-  pointer-events: none;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 5px 500px;
-  margin: 5px;
-  text-decoration: none;
-}
-
-.dropdown-content a:hover {
-  background-color: rgb(255, 255, 255);
+  min-width: 160px;
 }
 
 .dropdown:hover .dropdown-content {
-  display: grid;
-  padding: 10px;
+  display: block;
+  padding: 8px;
 }
 
-.navbar ul {
-  font-size: 1.1rem;
-  list-style: none;
-  /* padding-right: 100px; */
-  gap: 25px;
-  font-family: poppins;
-}
-
-nav li a:hover {
-  color: black;
-  border-radius: 5px;
-  background-color: white;
-  font-weight: 400;
-  /* text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.685); */
-}
-
-.navbar ul a {
+.dropdown-content a {
+  color: white;
   text-decoration: none;
-  color: whitesmoke;
-  padding: 5px 10px;
+  display: block;
+  font-size: 1rem;
+  width: 180px;
+  font-family: poppins;
+  text-align: center;
 }
 
-
-@media only screen and (max-width: 600px) {
-
-  header {
-    /* display: flex; */
-    flex-direction: column;
-    /* justify-content: center; */
-    background-color: rgba(0, 0, 0, 0.767);
-    min-width: 600px;
-  }
-
-  .header {
-    margin: 0 auto
-  }
-
-  .navbar ul {
-    padding-right: 100px;
-  }
-
-  ul li {
-    font-size: .9rem;
-    margin: 10px;
-  }
-
-  #header-logo h1 {
-    font-size: 1.7rem;
-    margin-right: 100px;
-  }
-
-  ul {
-    align-items: center;
-    /* text-align: center; */
-    /* margin: 20px; */
-  }
+.dropdown-content a:hover {
+  background-color: white;
+  font-weight: 500;
+  border-radius: 5px;
 }
