--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,19 +1,23 @@
 #header {
   display: flex;
   justify-content: space-around;
-  width: 100%;
-  padding: 30px 0;
+  /* padding: 10px 130px 10px 40px; */
+  margin: 30px;
   align-items: center;
-  /* sticky position */
-  position: sticky;
+  min-width: 780px;
+}
+
+.header-sticky {
+  position: fixed;
   top: 0;
   left: 0;
-  /* sticky position */
+  width: 100%;
+  z-index: 1000;
 }
 
 #header-logo h1 {
   color: rgb(255, 255, 255);
-  font-size: 2.2rem;
+  font-size: 2.3rem;
   font-family: Homenaje;
   font-weight: 500;
   letter-spacing: -1px;
@@ -35,61 +39,84 @@
 }
 
 .bg-logo-ccr {
+  padding-right: 10px;
   text-shadow: 4px 3px 3px rgba(0, 0, 0, 0.6);
-  padding: 0 10px;
 }
 
-.navbar ul {
+nav ul {
   display: flex;
-  gap: 20px;
-  list-style-type: none;
-}
-
-.navbar a {
-  font-size: 1.1rem;
-  text-decoration: none;
-  color: white;
-  padding: 10px;
-  font-family: poppins;
-}
-
-.navbar a:hover {
-  background-color: white;
-  color: black;
-  border-radius: 5px;
-  font-weight: 400;
-}
-
-.dropdown {
-  display: inline-block;
-  position: relative;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: transparent;
+  /* background-color: transparent; */
+  /* min-width: 160px; */
   z-index: 1;
-  min-width: 160px;
 }
+
+/* .drop-down a {
+  pointer-events: none;
+} */
+
+/* .dropdown-content a {
+  color: black;
+  padding: 5px 500px;
+  margin: 5px;
+  text-decoration: none;
+} */
+
+/* .dropdown-content a:hover {
+  background-color: rgb(255, 255, 255);
+} */
 
 .dropdown:hover .dropdown-content {
-  display: block;
-  padding: 8px;
+  display: grid;
+  /* padding: 5px; */
 }
 
-.dropdown-content a {
-  color: white;
-  text-decoration: none;
-  display: block;
-  font-size: 1rem;
-  width: 180px;
+.navbar ul {
+  font-size: 1.1rem;
+  list-style: none;
+  /* padding-right: 100px; */
+  gap: 20px;
   font-family: poppins;
-  text-align: center;
 }
 
-.dropdown-content a:hover {
+nav li a:hover {
+  color: black;
+  border-radius: 5px;
   background-color: white;
   font-weight: 500;
-  border-radius: 5px;
+  /* text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.685); */
+}
+
+.navbar ul a {
+  text-decoration: none;
+  color: whitesmoke;
+  padding: 5px 10px;
+}
+
+@media screen and (max-width: 768px) {
+  #header {
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 0;
+    margin: 0 auto;
+  }
+
+  #header-logo h1 {
+    font-size: 1.8rem;
+    /* Decrease font size for smaller screens */
+  }
+
+  nav ul {
+    /* padding: 0; */
+    margin: 10px;
+    font-size: .8rem;
+    align-items: center;
+  }
+
+
 }
