--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -97,17 +97,20 @@ nav li a:hover {
   padding: 5px 10px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 880px) {
   #header {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.603);
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
+    /* justify-content: space-around; */
     padding: 15px 0;
     margin: 0 auto;
   }
 
   #header-logo h1 {
     font-size: 1.8rem;
+    /* padding: 10px; */
+    /* margin: 10px; */
     /* Decrease font size for smaller screens */
   }
 
