--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,10 +1,13 @@
 #header {
   display: flex;
   justify-content: space-around;
+  flex-direction: row;
   /* padding: 10px 130px 10px 40px; */
   margin: 30px;
   align-items: center;
-  min-width: 780px;
+  /* min-width: 780px; */
+  background-repeat: no-repeat;
+  height: 100%;
 }
 
 .header-sticky {
@@ -101,7 +104,7 @@ nav li a:hover {
   #header {
     background-color: rgba(0, 0, 0, 0.603);
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     /* justify-content: space-around; */
     padding: 15px 0;
     margin: 0 auto;
