--- a/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
+++ b/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
@@ -1,7 +1,12 @@
+.laporan-keuangan-content {
+  height: 76.4vh;
+  overflow: auto;
+}
+
 .laporan-keuangan-rt h1 {
   color: rgb(255, 255, 255);
   text-align: center;
-  padding: 150px 0 25px 0;
+  padding: 50px 0 25px 0;
   font-size: 2.7rem;
   text-shadow: 2px 2px 2px #000000;
   font-family: Homenaje;
@@ -10,4 +15,17 @@
 
 .laporan-keuangan {
   text-align: center;
+}
+
+@media (max-width: 767px) {
+  .laporan-keuangan-content {
+    max-height: 66vh;
+    overflow: auto;
+  }
+
+  iframe {
+    height: 500px;
+    width: 400px;
+    overflow: auto;
+  }
 }
