--- a/src/pages/StrukturOrganisasi/strukturOrganisasi.css
+++ b/src/pages/StrukturOrganisasi/strukturOrganisasi.css
@@ -1,7 +1,12 @@
+.struktur-organisasi-content {
+  height: 76.4vh;
+  overflow: auto;
+}
+
 .struktur-organisasi h1 {
   color: rgb(255, 255, 255);
   text-align: center;
-  padding: 100px 0 25px 0;
+  padding: 50px 0 30px 0;
   font-size: 2.7rem;
   text-shadow: 2px 2px 2px #000000;
   font-family: Homenaje;
@@ -110,9 +115,17 @@
 }
 
 
+
 @media screen and (max-width: 880px) {
+
+  .struktur-organisasi-content {
+    max-height: 66vh;
+    overflow: auto;
+  }
+
   .struktur-pp-rt {
-    padding: 25px 0;
+    padding-top: 15px;
+    padding-bottom: 20px;
   }
 
   .struktur-pp-wakil {
