--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,15 +1,12 @@
 footer {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   font-family: poppins;
-  width: fit-content;
   margin: auto;
   padding: 50px;
 }
 
 #footer-style {
   border: 2px solid black;
-  /* height: 40px; */
-  height: fit-content;
   align-content: center;
   border-radius: 5px;
   overflow: hidden;
@@ -29,7 +26,14 @@ footer {
 .footer-text {
   background-color: black;
   color: white;
-  padding: 1px 8px;
+  padding: 11px;
   font-weight: 400;
-  /* border-radius: 4px 0 0 4px; */
+}
+
+@media (max-width: 767px) {
+  footer {
+    width: 100%;
+    font-size: .9rem;
+    padding: 45px 32px;
+  }
 }
