--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,12 +2,10 @@
   display: flex;
   justify-content: space-around;
   flex-direction: row;
-  /* padding: 10px 130px 10px 40px; */
   margin: 30px;
   align-items: center;
-  /* min-width: 780px; */
   background-repeat: no-repeat;
-  height: 100%;
+  width: 100%;
 }
 
 .header-sticky {
@@ -53,36 +51,21 @@ nav ul {
 .dropdown-content {
   display: none;
   position: absolute;
-  /* background-color: transparent; */
-  /* min-width: 160px; */
+  /* background-color: transparent;
+  min-width: 160px; */
   z-index: 1;
 }
 
-/* .drop-down a {
-  pointer-events: none;
-} */
-
-/* .dropdown-content a {
-  color: black;
-  padding: 5px 500px;
-  margin: 5px;
-  text-decoration: none;
-} */
-
-/* .dropdown-content a:hover {
-  background-color: rgb(255, 255, 255);
-} */
-
 .dropdown:hover .dropdown-content {
   display: grid;
-  /* padding: 5px; */
+  padding: 5px;
 }
 
 .navbar ul {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   list-style: none;
-  /* padding-right: 100px; */
-  gap: 20px;
+  gap: 10px;
+  padding: 20px 0;
   font-family: poppins;
 }
 
@@ -90,8 +73,8 @@ nav li a:hover {
   color: black;
   border-radius: 5px;
   background-color: white;
-  font-weight: 500;
-  /* text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.685); */
+  transition: 0.6s;
+  font-weight: 400;
 }
 
 .navbar ul a {
@@ -102,26 +85,19 @@ nav li a:hover {
 
 @media screen and (max-width: 880px) {
   #header {
-    background-color: rgba(0, 0, 0, 0.603);
+    background-color: rgba(0, 0, 0, 0.445);
     display: flex;
     flex-direction: column;
-    /* justify-content: space-around; */
-    padding: 15px 0;
+    padding: 20px 0;
     margin: 0 auto;
   }
 
   #header-logo h1 {
     font-size: 1.8rem;
-    /* padding: 10px; */
-    /* margin: 10px; */
-    /* Decrease font size for smaller screens */
   }
 
-  nav ul {
-    /* padding: 0; */
-    margin: 10px;
-    font-size: .8rem;
-    align-items: center;
+  .navbar ul {
+    font-size: 1.1rem;
   }
 
 
