--- a/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
+++ b/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
@@ -7,7 +7,7 @@
   color: rgb(255, 255, 255);
   text-align: center;
   padding: 50px 0 25px 0;
-  font-size: 2.7rem;
+  font-size: 2.8rem;
   text-shadow: 2px 2px 2px #000000;
   font-family: Homenaje;
   font-weight: 300;
@@ -17,15 +17,24 @@
   text-align: center;
 }
 
+iframe {
+  border-radius: 5px;
+  border: none;
+}
+
 @media (max-width: 767px) {
   .laporan-keuangan-content {
     max-height: 66vh;
     overflow: auto;
   }
 
+  .laporan-keuangan-rt h1 {
+    font-size: 2.2rem;
+  }
+
   iframe {
-    height: 500px;
-    width: 400px;
+    height: 450px;
+    width: 350px;
     overflow: auto;
   }
 }
