--- a/src/pages/KeuanganRT/LaporanKeuanganRuko/laporanKeuanganRuko.css
+++ b/src/pages/KeuanganRT/LaporanKeuanganRuko/laporanKeuanganRuko.css
@@ -2,7 +2,7 @@
   color: rgb(255, 255, 255);
   text-align: center;
   padding: 50px 0 30px 0;
-  font-size: 2.7rem;
+  font-size: 2.8rem;
   text-shadow: 2px 2px 2px #000000;
   font-family: Homenaje;
   font-weight: 300;
@@ -11,4 +11,22 @@
 iframe {
   border-radius: 5px;
   border: none;
+}
+
+@media (max-width: 767px) {
+  .laporan-keuangan-content {
+    max-height: 66vh;
+    overflow: auto;
+  }
+
+  .laporan-keuangan-ruko h1 {
+    font-size: 2.2rem;
+  }
+
+  iframe {
+    height: 450px;
+    width: 350px;
+    overflow: auto;
+    /* border-radius: 5px; */
+  }
 }
