--- a/src/pages/StrukturOrganisasi/strukturOrganisasi.css
+++ b/src/pages/StrukturOrganisasi/strukturOrganisasi.css
@@ -1,8 +1,3 @@
-.struktur-organisasi-content {
-  height: 76.4vh;
-  overflow: auto;
-}
-
 .struktur-organisasi h1 {
   color: rgb(255, 255, 255);
   text-align: center;
@@ -115,13 +110,8 @@
 }
 
 
-
-@media screen and (max-width: 880px) {
-
-  .struktur-organisasi-content {
-    max-height: 66vh;
-    overflow: auto;
-  }
+/* @media screen and (max-width: 880px) */
+@media screen and (min-width: 768px) {
 
   .struktur-pp-rt {
     padding-top: 15px;
