--- a/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
+++ b/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
@@ -1,6 +1,7 @@
 .laporan-keuangan-content {
-  height: 76.4vh;
-  overflow: auto;
+  min-height: 85vh;
+  /* overflow: auto; */
+  padding-top: 125px;
 }
 
 .laporan-keuangan-rt h1 {
@@ -15,6 +16,7 @@
 
 .laporan-keuangan {
   text-align: center;
+  padding: 30px 0;
 }
 
 iframe {
