--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -6,14 +6,15 @@
   align-items: center;
   background-repeat: no-repeat;
   width: 100%;
+  padding-bottom: px;
 }
 
 .header-sticky {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  z-index: 1000;
+  /* width: 100%; */
+  /* z-index: 1000; */
 }
 
 #header-logo h1 {
@@ -51,14 +52,13 @@ nav ul {
 .dropdown-content {
   display: none;
   position: absolute;
-  /* background-color: transparent;
-  min-width: 160px; */
   z-index: 1;
+  gap: 10px;
 }
 
 .dropdown:hover .dropdown-content {
   display: grid;
-  padding: 5px;
+  padding: 10px;
 }
 
 .navbar ul {
@@ -73,7 +73,7 @@ nav li a:hover {
   color: black;
   border-radius: 5px;
   background-color: white;
-  transition: 0.6s;
+  transition: 0.6s ease-in;
   font-weight: 400;
 }
 
@@ -84,12 +84,17 @@ nav li a:hover {
 }
 
 @media screen and (max-width: 880px) {
+
   #header {
     background-color: rgba(0, 0, 0, 0.445);
     display: flex;
     flex-direction: column;
     padding: 20px 0;
     margin: 0 auto;
+  }
+
+  #header .dropdown-content {
+    height: fit-content;
   }
 
   #header-logo h1 {
@@ -100,5 +105,13 @@ nav li a:hover {
     font-size: 1.1rem;
   }
 
-
+  .dropdown:hover .dropdown-content {
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.445);
+    padding: 10px 5px;
+    margin: 10px 0;
+    left: 120px;
+    transition: ease-in-out;
+  }
 }
