--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -12,9 +12,6 @@
 .header-sticky {
   position: fixed;
   top: 0;
-  left: 0;
-  /* width: 100%; */
-  /* z-index: 1000; */
 }
 
 #header-logo h1 {
@@ -65,7 +62,7 @@ nav ul {
   font-size: 1.2rem;
   list-style: none;
   gap: 10px;
-  padding: 20px 0;
+  padding: 15px 0;
   font-family: poppins;
 }
 
@@ -80,21 +77,18 @@ nav li a:hover {
 .navbar ul a {
   text-decoration: none;
   color: whitesmoke;
-  padding: 5px 10px;
+  padding: 0 10px;
 }
 
 @media screen and (max-width: 880px) {
 
   #header {
-    background-color: rgba(0, 0, 0, 0.445);
+    background-color: rgba(0, 0, 0, 0.800);
     display: flex;
     flex-direction: column;
     padding: 20px 0;
     margin: 0 auto;
-  }
-
-  #header .dropdown-content {
-    height: fit-content;
+    height: 122px;
   }
 
   #header-logo h1 {
@@ -108,10 +102,10 @@ nav li a:hover {
   .dropdown:hover .dropdown-content {
     display: flex;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.445);
+    background-color: rgba(0, 0, 0, 0.800);
     padding: 10px 5px;
-    margin: 10px 0;
+    margin: 15px 0;
     left: 120px;
-    transition: ease-in-out;
+    transition: .5s ease-out;
   }
 }
