--- a/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
+++ b/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
@@ -1,6 +1,5 @@
 .laporan-keuangan-content {
   min-height: 85vh;
-  /* overflow: auto; */
   padding-top: 125px;
 }
 
@@ -24,6 +23,23 @@ iframe {
   border: none;
 }
 
+.laporan-kas {
+  display: flex;
+  flex-direction: row;
+  padding: 20px 0;
+  gap: 50px;
+  justify-content: center;
+}
+
+.laporan-ipl iframe,
+.laporan-saldo iframe,
+.laporan-ipl-mingguan iframe {
+  background-color: rgba(0, 0, 0, 0.312);
+  padding: 30px;
+  margin: 0 250px;
+  border-radius: 10px;
+}
+
 @media (max-width: 767px) {
   .laporan-keuangan-content {
     max-height: 66vh;
@@ -38,5 +54,10 @@ iframe {
     height: 450px;
     width: 350px;
     overflow: auto;
+  }
+
+  .laporan-kas {
+    display: grid;
+    padding: 10px;
   }
 }
