--- a/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
+++ b/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
@@ -26,14 +26,21 @@ iframe {
 .laporan-kas {
   display: flex;
   flex-direction: row;
-  padding: 20px 0;
+  padding: 40px 0;
   gap: 50px;
   justify-content: center;
 }
 
-.laporan-ipl iframe,
+/* .laporan-ipl iframe,
 .laporan-saldo iframe,
 .laporan-ipl-mingguan iframe {
+  background-color: rgba(0, 0, 0, 0.312);
+  padding: 30px;
+  margin: 0 250px;
+  border-radius: 10px;
+} */
+
+.laporan-card iframe {
   background-color: rgba(0, 0, 0, 0.312);
   padding: 30px;
   margin: 0 250px;
