--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -6,7 +6,6 @@
   align-items: center;
   background-repeat: no-repeat;
   width: 100%;
-  padding-bottom: px;
 }
 
 .header-sticky {
@@ -89,6 +88,7 @@ nav li a:hover {
     padding: 20px 0;
     margin: 0 auto;
     height: 122px;
+    transition: 0.8s;
   }
 
   #header-logo h1 {
