--- a/src/pages/Beranda/beranda.css
+++ b/src/pages/Beranda/beranda.css
@@ -16,15 +16,18 @@
 }
 
 .welcome-text {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
+  color: black;
   font-style: italic;
   padding: 0 50px;
   text-align: center;
+  font-family: 'poppins', Courier, monospace;
 }
 
 .pengurus-text {
   padding-top: 10px;
   font-size: 1.1rem;
+  color: black;
   text-align: center;
 }
 
@@ -43,7 +46,17 @@
   }
 
   .welcome-text {
-    font-family: poppins, Times New Roman;
     font-size: 1.1rem;
+    color: black;
+  }
+
+  .pengurus-text {
+    font-size: .9rem;
+    color: black;
+  }
+
+  .welcome-text,
+  .pengurus-text {
+    font-family: 'poppins', Segoe UI, Tahoma;
   }
 }
