--- a/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
+++ b/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
@@ -31,14 +31,14 @@ iframe {
   justify-content: center;
 }
 
-.laporan-card iframe {
+/* .laporan-card iframe {
   background-color: rgba(0, 0, 0, 0.312);
   padding: 30px;
   margin: 0 250px;
   border-radius: 10px;
-}
+} */
 
-@media (max-width: 767px) {
+@media (min-width: 300px) {
   .laporan-keuangan-content {
     max-height: 66vh;
     overflow: auto;
@@ -46,6 +46,33 @@ iframe {
 
   .laporan-keuangan-rt h1 {
     font-size: 2.2rem;
+  }
+
+  iframe {
+    height: 450px;
+    width: 350px;
+    overflow: auto;
+  }
+
+  .laporan-kas {
+    display: grid;
+    padding: 10px;
+  }
+}
+
+@media (min-width: 768px) {
+  .laporan-keuangan-content {
+    max-height: 66vh;
+    overflow: auto;
+  }
+
+  .laporan-keuangan-rt h1 {
+    font-size: 2.2rem;
+  }
+
+  .laporan-card-rt iframe,
+  .laporan-card iframe {
+    width: 1000px;
   }
 
   iframe {
