--- a/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
+++ b/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
@@ -38,7 +38,17 @@ iframe {
   border-radius: 10px;
 } */
 
-@media (min-width: 300px) {
+
+@media (min-width: 360px) and (max-width: 430px) {}
+
+@media (max-width: 767px) {
+  .laporan-kas {
+    display: grid;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1114px)
+/* @media (min-width: 300px) {
   .laporan-keuangan-content {
     max-height: 66vh;
     overflow: auto;
@@ -58,9 +68,9 @@ iframe {
     display: grid;
     padding: 10px;
   }
-}
+} */
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) and (max-width: 1114px) {
   .laporan-keuangan-content {
     max-height: 66vh;
     overflow: auto;
@@ -70,8 +80,7 @@ iframe {
     font-size: 2.2rem;
   }
 
-  .laporan-card-rt iframe,
-  .laporan-card iframe {
+  .laporan-card-rt iframe {
     width: 1000px;
   }
 
@@ -85,4 +94,4 @@ iframe {
     display: grid;
     padding: 10px;
   }
-}
+} */
