--- a/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
+++ b/src/pages/KeuanganRT/LaporanKeuanganRT/laporanKeuanganRT.css
@@ -47,7 +47,16 @@ iframe {
   }
 }
 
-@media (min-width: 768px) and (max-width: 1114px)
+@media (min-width: 768px) and (max-width: 1114px) {
+  .laporan-rt iframe {
+    width: 600px;
+  }
+
+  .laporan-kas {
+    display: grid;
+  }
+}
+
 /* @media (min-width: 300px) {
   .laporan-keuangan-content {
     max-height: 66vh;
