--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -79,7 +79,77 @@ nav li a:hover {
   padding: 0 10px;
 }
 
-@media screen and (max-width: 880px) {
+@media (min-width: 360px) and (max-width: 430px) {
+  #header {
+    background-color: rgba(0, 0, 0, 0.800);
+    display: flex;
+    flex-direction: column;
+    padding: 20px 0;
+    margin: 0 auto;
+    height: 122px;
+    transition: 0.8s;
+  }
+
+  .dropdown a,
+  .navbar a {
+    font-size: 1rem;
+  }
+
+  .dropdown:hover .dropdown-content {
+    background-color: rgba(0, 0, 0, 0.800);
+    margin-top: 5px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 767px) {
+  .navbar {
+    margin: 0 20px;
+  }
+
+  #header {
+    background-color: rgba(0, 0, 0, 0.800);
+    display: flex;
+    flex-direction: column;
+    padding: 20px 0;
+    margin: 0 auto;
+    height: 130px;
+    transition: 0.8s;
+  }
+
+  .navbar a,
+  .dropdown a {
+    font-size: 1.1rem;
+    letter-spacing: -1px;
+  }
+
+  .dropdown:hover .dropdown-content {
+    background-color: rgba(0, 0, 0, 0.800);
+    margin-top: 12px;
+    text-align: center;
+  }
+}
+
+
+@media (min-width: 768px) and (max-width: 1114px) {
+  #header {
+    background-color: rgba(0, 0, 0, 0.800);
+    display: flex;
+    flex-direction: column;
+    padding: 20px 0;
+    margin: 0 auto;
+    height: 122px;
+    transition: 0.8s;
+  }
+
+  .dropdown:hover .dropdown-content {
+    background-color: rgba(0, 0, 0, 0.800);
+    margin-top: 5px;
+    text-align: center;
+  }
+}
+
+/* @media screen and (max-width: 880px) {
 
   #header {
     background-color: rgba(0, 0, 0, 0.800);
@@ -108,4 +178,4 @@ nav li a:hover {
     left: 120px;
     transition: .5s ease-out;
   }
-}
+} */
