--- a/src/pages/KeuanganRT/LaporanKeuanganRuko/laporanKeuanganRuko.css
+++ b/src/pages/KeuanganRT/LaporanKeuanganRuko/laporanKeuanganRuko.css
@@ -1,11 +1,16 @@
 .laporan-keuangan-ruko h1 {
   color: rgb(255, 255, 255);
   text-align: center;
-  padding: 50px 0 30px 0;
+  padding: 165px 0 30px 0;
   font-size: 2.8rem;
   text-shadow: 2px 2px 2px #000000;
   font-family: Homenaje;
   font-weight: 300;
+}
+
+.laporan-kas-ruko {
+  display: flex;
+  flex-direction: column;
 }
 
 iframe {
