--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -3,6 +3,7 @@
 @import url('/src//pages//Beranda/beranda.css');
 @import url('/src/pages/Galeri/galeri.css');
 @import url('/src/pages/StrukturOrganisasi/strukturOrganisasi.css');
+@import url('/src/components/LoginForm/loginForm.css');
 @import url('/src/pages/DataWarga/data-warga.css');
 
 * {
