--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,10 +2,11 @@
   display: flex;
   justify-content: space-around;
   flex-direction: row;
-  margin: 30px;
+  padding: 10px 0;
   align-items: center;
   background-repeat: no-repeat;
   width: 100%;
+  background-color: rgba(0, 0, 0, 0.489);
 }
 
 .header-sticky {
@@ -54,7 +55,10 @@ nav ul {
 
 .dropdown:hover .dropdown-content {
   display: grid;
-  padding: 10px;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.489);
+  /* position: absolute; */
+  /* overflow: hidden; */
 }
 
 .navbar ul {
@@ -148,7 +152,7 @@ nav li a:hover {
 
   .dropdown:hover .dropdown-content {
     background-color: rgba(0, 0, 0, 0.800);
-    margin-top: 5px;
+
     text-align: center;
   }
 }
