--- a/src/pages/Beranda/beranda.css
+++ b/src/pages/Beranda/beranda.css
@@ -34,7 +34,7 @@
 @media screen and (max-width: 880px) {
   .image-container img {
     padding: 0 15px;
-    min-height: 50%;
+    height: 225px;
     width: 100%;
     margin-bottom: 20px;
   }
