--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -111,7 +111,7 @@ nav li a:hover {
   }
 }
 
-@media (max-width: 767px) {
+@media (min-width: 431px) and (max-width: 767px) {
   .navbar {
     margin: 0 20px;
   }
