--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -84,15 +84,21 @@ nav li a:hover {
   padding: 0 10px;
 }
 
-@media (min-width: 360px) and (max-width: 430px) {
+@media (min-width: 330px) and (max-width: 430px) {
   #header {
     background-color: rgba(0, 0, 0, 0.800);
     display: flex;
     flex-direction: column;
-    padding: 20px 0;
     margin: 0 auto;
-    height: 122px;
     transition: 0.8s;
+  }
+
+  #header-logo .header-logo {
+    font-size: 1.8rem;
+  }
+
+  .navbar ul a {
+    padding: 0 4px;
   }
 
   .dropdown a,
@@ -107,9 +113,6 @@ nav li a:hover {
 }
 
 @media (min-width: 431px) and (max-width: 767px) {
-  /* .navbar {
-    margin: 0 20px;
-  } */
 
   #header {
     background-color: rgba(0, 0, 0, 0.800);
