--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -17,6 +17,6 @@ body {
     linear-gradient(180deg in oklab,
       oklch(70% 0.5 258) 0% 13%, oklch(55% 0.5 200) 85% 49%);
   background-repeat: no-repeat;
-  min-height: 100vh;
+  height: 100%;
   overflow-x: hidden;
 }
