--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -84,7 +84,68 @@ nav li a:hover {
   padding: 0 10px;
 }
 
-@media (min-width: 330px) and (max-width: 430px) {
+.hide-menu {
+  display: none;
+}
+
+@media only screen and (max-width: 799px) {
+  #header {
+    display: grid;
+    text-align: center;
+  }
+
+  .logo-hideMenu {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .navbar ul {
+    display: none;
+  }
+
+  .navbar ul li {
+    padding: 10px 0;
+  }
+
+  .burger-menu ul {
+    display: grid;
+    padding: 50px;
+  }
+
+  .burger-menu .dropdown-content {
+    position: relative;
+  }
+
+  .dropdown:hover .dropdown-content {
+    background-color: transparent;
+    text-align: center;
+    padding: 25px 0;
+  }
+
+  .dropdown>:link,
+  nav ul li>:link {
+    font-weight: 600
+  }
+
+  .hide-menu {
+    display: block;
+    color: whitesmoke;
+    transition: all 0.3s ease-in-out;
+    font-size: 2rem;
+  }
+
+  .nav-wrapper {
+    display: none;
+  }
+
+  .nav-wrapper.is-open {
+    display: block;
+  }
+}
+
+/* @media (min-width: 330px) and (max-width: 430px) {
   #header {
     background-color: rgba(0, 0, 0, 0.800);
     display: flex;
@@ -110,9 +171,9 @@ nav li a:hover {
     background-color: rgba(0, 0, 0, 0.800);
     text-align: center;
   }
-}
+} */
 
-@media (min-width: 431px) and (max-width: 767px) {
+/* @media (min-width: 431px) and (max-width: 767px) {
 
   #header {
     background-color: rgba(0, 0, 0, 0.800);
@@ -154,4 +215,4 @@ nav li a:hover {
 
     text-align: center;
   }
-}
+} */
