--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -38,6 +38,12 @@ footer {
   }
 }
 
+@media only screen and (min-width: 300px) {
+  footer {
+    font-size: 1rem;
+  }
+}
+
 /* @media (min-width: 360px) and (max-width: 430px) {
   footer {
     font-size: .9rem;
