--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,9 +1,6 @@
 footer {
-  font-size: 1.2rem;
   font-family: poppins;
   font-weight: 300;
-  height: 150px;
-  padding: 40px 0;
 }
 
 #footer-style {
@@ -14,8 +11,9 @@ footer {
 
 .design-text {
   background: rgba(255, 255, 255, 0.705);
-  padding: 0 10px;
+  padding: 5px 10px;
   font-style: italic;
+  font-size: 1.2rem;
   letter-spacing: -1px;
 }
 
@@ -28,38 +26,15 @@ footer {
   color: white;
   padding: 11px;
   font-weight: 400;
+  font-size: 1.2rem;
 }
 
-@media only screen and (max-width: 799px) {
-  footer {
-    font-size: .8 rem;
-    letter-spacing: -1px;
-    margin: 0 10px;
-  }
-}
+@media only screen and (min-width: 300px) and (max-width: 486px) {
 
-@media only screen and (min-width: 300px) {
-  footer {
-    font-size: 1rem;
-  }
-}
-
-/* @media (min-width: 360px) and (max-width: 430px) {
-  footer {
+  .design-text,
+  .footer-text {
     font-size: .9rem;
-    letter-spacing: -1px;
+    letter-spacing: -1;
+    padding: 10px;
   }
 }
-
-@media (max-width: 767px) {
-  footer {
-    font-size: 1rem;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 1114px) {
-  footer {
-    font-size: 1.5rem;
-    margin-top: 200px;
-  }
-} */
