--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -88,15 +88,16 @@ nav li a:hover {
   display: none;
 }
 
-@media only screen and (max-width:880px) {
+@media only screen and (min-width: 300px) and (max-width: 880px) {
   #header {
     display: grid;
     text-align: center;
     justify-content: stretch;
+    padding: 20px 0;
   }
 
   #header-logo h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   .logo-hideMenu {
@@ -116,7 +117,7 @@ nav li a:hover {
 
   .burger-menu ul {
     display: grid;
-    padding: 50px;
+    padding: 50px 0;
   }
 
   .burger-menu .dropdown-content {
@@ -131,14 +132,14 @@ nav li a:hover {
 
   .dropdown>:link,
   nav ul li>:link {
-    font-weight: 600
+    font-weight: 400
   }
 
   .hide-menu {
     display: block;
     color: whitesmoke;
     transition: all 0.3s ease-in-out;
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
 
   .nav-wrapper {
@@ -149,84 +150,3 @@ nav li a:hover {
     display: block;
   }
 }
-
-/* @media only screen and (min-width: 800px) {
-  #header {
-    display: flex;
-    flex-direction: row;
-    padding: 20px 0;
-    margin: 0 auto;
-  }
-} */
-
-/* @media (min-width: 330px) and (max-width: 430px) {
-  #header {
-    background-color: rgba(0, 0, 0, 0.800);
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    transition: 0.8s;
-  }
-
-  #header-logo .header-logo {
-    font-size: 1.8rem;
-  }
-
-  .navbar ul a {
-    padding: 0 4px;
-  }
-
-  .dropdown a,
-  .navbar a {
-    font-size: 1rem;
-  }
-
-  .dropdown:hover .dropdown-content {
-    background-color: rgba(0, 0, 0, 0.800);
-    text-align: center;
-  }
-} */
-
-/* @media (min-width: 431px) and (max-width: 767px) {
-
-  #header {
-    background-color: rgba(0, 0, 0, 0.800);
-    display: flex;
-    flex-direction: column;
-    padding: 20px 0;
-    margin: 0 auto;
-    height: 130px;
-    transition: 0.8s;
-  }
-
-  .navbar a,
-  .dropdown a {
-    font-size: 1.1rem;
-    letter-spacing: -1px;
-  }
-
-  .dropdown:hover .dropdown-content {
-    background-color: rgba(0, 0, 0, 0.800);
-    margin-top: 1px;
-    text-align: center;
-  }
-}
-
-
-@media (min-width: 768px) and (max-width: 1114px) {
-  #header {
-    background-color: rgba(0, 0, 0, 0.800);
-    display: flex;
-    flex-direction: column;
-    padding: 20px 0;
-    margin: 0 auto;
-    height: 122px;
-    transition: 0.8s;
-  }
-
-  .dropdown:hover .dropdown-content {
-    background-color: rgba(0, 0, 0, 0.800);
-
-    text-align: center;
-  }
-} */
