--- a/src/components/LoginForm/loginForm.css
+++ b/src/components/LoginForm/loginForm.css
@@ -57,7 +57,6 @@ input {
   color: black;
 }
 
-
 #login-button {
   padding: 5px 20px;
   border-radius: 15px;
@@ -67,5 +66,10 @@ input {
 
 #login-button:hover {
   background-color: #ffffff;
-  /* color: rgb(0, 0, 0); */
+}
+
+@media only screen and (min-width: 300px) and (max-width: 486px) {
+  #form-fieldset {
+    width: 2vw;
+  }
 }
