--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -120,7 +120,7 @@ nav li a:hover {
   }
 
   .burger-menu .dropdown-content {
-    position: relative;
+    position: absolute;
   }
 
   .dropdown:hover .dropdown-content {
