--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -80,7 +80,7 @@ nav li a:hover {
 .navbar ul a {
   text-decoration: none;
   color: whitesmoke;
-  padding: 0 10px;
+  /*padding: 0 10px;*/
 }
 
 .hide-menu {
