--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -6,7 +6,7 @@
   align-items: center;
   background-repeat: no-repeat;
   width: 100%;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.726);
 }
 
 .header-sticky {
