--- a/src/pages/Beranda/beranda.css
+++ b/src/pages/Beranda/beranda.css
@@ -32,9 +32,12 @@
 }
 
 @media screen and (max-width: 880px) {
+
   .image-container img {
     padding: 0 15px;
-    width: 100%;
+    /* width: 100%; */
+    width: 300px;
+    height: 200px;
     margin-bottom: 20px;
   }
 
@@ -45,7 +48,7 @@
   }
 
   .welcome-text {
-    font-size: 1rem;
+    font-size: 1.1rem;
     color: black;
     padding: 0 45px;
   }
