fix responsive screen for tablet & change logo font-size

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -88,7 +88,7 @@ nav li a:hover {
   display: none;
 }
 
-@media only screen and (min-width: 300px) and (max-width: 880px) {
+@media only screen and (min-width: 300px) and (max-width: 767px) {
   #header {
     display: grid;
     text-align: center;
@@ -103,9 +103,9 @@ nav li a:hover {
 
   .logo-hideMenu {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    gap: 10px;
+    padding: 0 10px;
   }
 
   .navbar ul {
@@ -153,5 +153,11 @@ nav li a:hover {
 
   .nav-wrapper.is-open {
     display: block;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1114px) {
+  #header-logo h1 {
+    font-size: 1.8rem;
   }
 }
