--- a/src/pages/Beranda/beranda.css
+++ b/src/pages/Beranda/beranda.css
@@ -63,3 +63,10 @@
     font-family: 'poppins', Segoe UI, Tahoma;
   }
 }
+
+@media only screen and (min-width: 576px) and (max-width: 880px) {
+  .image-container {
+    min-height: 75vh;
+    margin-top: 75px;
+  }
+}
