--- a/src/pages/StrukturOrganisasi/strukturOrganisasi.css
+++ b/src/pages/StrukturOrganisasi/strukturOrganisasi.css
@@ -5,21 +5,15 @@
 .struktur-organisasi h1 {
   color: rgb(255, 255, 255);
   text-align: center;
-  padding: 20px 0 30px 0;
+  padding-bottom: 20px;
   font-size: 2.5rem;
   text-shadow: 2px 2px 2px #000000;
   font-family: Homenaje;
-  font-weight: 300;
+  font-weight: 500;
 }
 
 .struktur-container {
   text-align: center;
-  padding: 5px 0;
-}
-
-.struktur-pp-rt {
-  /* text-align: center; */
-  padding: 30px 0;
 }
 
 .struktur-pp-rt img {
@@ -35,7 +29,7 @@
 
 .struktur-pp-wakil {
   display: inline-block;
-  padding: 10px 50px;
+  padding: 30px 50px;
 }
 
 .struktur-pp-wakil img {
