--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -92,7 +92,7 @@ nav li a:hover {
     display: grid;
     text-align: center;
     justify-content: stretch;
-    padding: 20px 0;
+    padding: 20px 10px;
     background-color: rgba(0, 0, 0, 0.648);
   }
 
