--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -154,8 +154,20 @@ nav li a:hover {
   }
 }
 
+@media only screen and (max-width: 321px) {
+  #header-logo h1 {
+    font-size: 1.4rem;
+  }
+}
+
 @media only screen and (min-width: 768px) and (max-width: 1114px) {
   #header-logo h1 {
     font-size: 1.7rem;
+  }
+}
+
+@media only screen and (min-width: 799px) and (max-width: 835px) {
+  .struktur-content {
+    min-height: 94vh;
   }
 }
