--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -59,10 +59,10 @@ nav ul {
 
 .dropdown:hover .dropdown-content {
   display: grid;
-  padding: 10px 5px 5px 5px;
+  padding: 10px 5px 5px 15px;
   background-color: #DFD7BF;
   border-radius: 10px;
-  text-align: center;
+  text-align: left;
   font-weight: 300;
 }
 
@@ -110,7 +110,7 @@ nav li a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10px;
+    padding-right: 15px;
   }
 
   .navbar ul {
@@ -118,14 +118,16 @@ nav li a:hover {
   }
 
   .navbar ul li {
-    padding: 10px 0;
+    text-align: left;
+  }
+
+  .navbar ul li:first-child {
+    padding-top: 20px;
   }
 
   nav li a:hover {
-    background-color: rgba(107, 102, 102, 0.585);
-    color: white;
+    background-color: rgba(107, 102, 102, 0.298);
     width: fit-content;
-    margin: 0 auto;
   }
 
   .burger-menu ul {
@@ -138,10 +140,9 @@ nav li a:hover {
 
   .dropdown:hover .dropdown-content {
     background-color: transparent;
-    text-align: center;
+    text-align: left;
     font-weight: 200;
     font-size: 1.1rem;
-    padding: 10px 0;
   }
 
   .hide-menu {
