--- a/src/pages/KeuanganRT/LaporanKeuanganRuko/laporanKeuanganRuko.css
+++ b/src/pages/KeuanganRT/LaporanKeuanganRuko/laporanKeuanganRuko.css
@@ -1,9 +1,9 @@
 .laporan-keuangan-ruko h1 {
-  color: rgb(255, 255, 255);
+  color: #3F2305;
   text-align: center;
   padding: 165px 0 30px 0;
   font-size: 2.8rem;
-  text-shadow: 2px 2px 2px #000000;
+  text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.40);
   font-family: Homenaje;
   font-weight: 300;
 }
