--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -54,7 +54,7 @@ nav ul {
   display: none;
   position: absolute;
   z-index: 1;
-  gap: 10px;
+  gap: 5px;
 }
 
 .dropdown:hover .dropdown-content {
@@ -138,11 +138,19 @@ nav li a:hover {
     position: relative;
   }
 
-  .dropdown:hover .dropdown-content {
+  /* .dropdown:hover .dropdown-content {
     background-color: transparent;
     text-align: left;
     font-weight: 200;
     font-size: 1.1rem;
+  } */
+
+  .dropdown-content {
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    font-size: 1.2rem;
+    font-weight: 200;
   }
 
   .hide-menu {
