--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -29,7 +29,16 @@ footer {
   font-size: 1.2rem;
 }
 
-@media only screen and (min-width: 300px) and (max-width: 486px) {
+@media only screen and (min-width: 320px) and (max-width: 486px) {
+
+  .design-text,
+  .footer-text {
+    font-size: .8rem;
+    padding: 10px;
+  }
+}
+
+@media only screen and (min-width: 300px) and (max-width: 319px) {
 
   .design-text,
   .footer-text {
