--- a/src/pages/StrukturOrganisasi/strukturOrganisasi.css
+++ b/src/pages/StrukturOrganisasi/strukturOrganisasi.css
@@ -26,9 +26,13 @@
   -moz-box-shadow: 6px 4px 5px 0px rgba(0, 0, 0, 0.36);
 }
 
+.struktur-pp-rt {
+  padding-bottom: 25px;
+}
+
 .struktur-pp-wakil {
   display: inline-block;
-  padding: 50px 50px;
+  padding: 15px 50px;
 }
 
 .struktur-pp-wakil img {
