--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -7,9 +7,9 @@
   width: 100%;
   background-color: #DFD7BF;
   /* box shadow */
-  box-shadow: 0px 8px 5px 0px rgba(0, 0, 0, 0.20);
   -webkit-box-shadow: 0px 8px 5px 0px rgba(0, 0, 0, 0.20);
   -moz-box-shadow: 0px 8px 5px 0px rgba(0, 0, 0, 0.20);
+  box-shadow: 0px 8px 5px 0px rgba(0, 0, 0, 0.20);
   /* box shadow */
 }
 
@@ -63,7 +63,6 @@ nav ul {
   background-color: #DFD7BF;
   border-radius: 10px;
   text-align: left;
-  font-weight: 300;
 }
 
 .navbar ul {
@@ -82,12 +81,14 @@ nav li a:hover {
   box-shadow: 0 4px 30px #3f230552;
   backdrop-filter: blur(0px);
   -webkit-backdrop-filter: blur(0px);
+  width: fit-content;
 }
 
 .navbar ul a {
   text-decoration: none;
   color: #3F2305;
   padding: 0 10px;
+  font-weight: 400;
 }
 
 .hide-menu {
@@ -103,7 +104,7 @@ nav li a:hover {
   }
 
   #header-logo h1 {
-    font-size: 1.8rem;
+    font-size: 1.7rem;
   }
 
   .logo-hideMenu {
@@ -132,6 +133,7 @@ nav li a:hover {
     font-weight: 200;
     padding-left: 10px;
     width: fit-content;
+    width: -moz-fit-content;
   }
 
   .nav-wrapper {
