--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -79,8 +79,10 @@ nav li a:hover {
   background: rgba(255, 255, 255, 0.05);
   border-radius: 15px;
   box-shadow: 0 4px 30px #3f230552;
-  backdrop-filter: blur(0px);
   -webkit-backdrop-filter: blur(0px);
+  backdrop-filter: blur(0px);
+  width: -moz-fit-content;
+  /* For Firefox 3+ */
   width: fit-content;
 }
 
@@ -132,8 +134,8 @@ nav li a:hover {
     padding: 0;
     font-weight: 200;
     padding-left: 10px;
-    width: fit-content;
     width: -moz-fit-content;
+    width: fit-content;
   }
 
   .nav-wrapper {
@@ -153,7 +155,6 @@ nav li a:hover {
   .burger-menu .dropdown-content {
     position: relative;
   }
-
 
   .hide-menu {
     display: block;
