--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,6 +1,11 @@
 footer {
   font-family: poppins;
   font-weight: 300;
+  display: flex;
+  justify-content: center;
+  padding: 15px 0;
+  align-items: flex-end;
+  transform: scale(0.9, 1);
 }
 
 #footer-style {
@@ -29,20 +34,14 @@ footer {
   font-size: 1.2rem;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 486px) {
-
-  .design-text,
-  .footer-text {
-    font-size: .8rem;
-    padding: 10px;
-  }
-}
-
-@media only screen and (min-width: 300px) and (max-width: 319px) {
+@media only screen and (min-width: 299px) and (max-width: 486px) {
 
   .design-text,
   .footer-text {
     font-size: .7rem;
-    padding: 10px;
+  }
+
+  footer {
+    transform: scale(0.9, 1.2);
   }
 }
